src/main/java/semantic/symbolTable/test/failing/undefinedStruct.ru
/? UndefinedStructException
impl A {
    .() {}
}
start {}

/? ERROR: SEMANTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 2 | 6 | No se definió un struct para: A |